Fix misplaced calc text on mobile

--- a/style.css
+++ b/style.css
@@ -115,15 +115,16 @@ body {
   color: white;
   opacity: 0.5;
   font-size: 0.7em;
+  font-family: "Times New Roman", Times, serif;
   letter-spacing: 0.1em;
 }
 .calc__lcd {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: flex-end;
   background: #1d3025;
   box-shadow: inset 0px 0.3em 3px 2px rgba(0, 0, 0, 0.8);
-  padding: 0 1em;
+  padding: 0.5em 1em;
 }
 .calc__lcd-text {
   font-family: "Digital", sans-serif;
